# easybench-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  lib.rs
src/: lib.rs
