[package]
name = "easybench"
version = "0.1.4"
authors = ["Alex Sayers <alex.sayers@gmail.com>"]
description = "A lightweight benchmarking library"
documentation = "https://docs.rs/easybench/"
repository = "https://github.com/asayers/easybench-rs"
readme = "README.md"
keywords = ["benchmark"]
license = "MIT OR Apache-2.0"

[lib]
name = "easybench"
path = "lib.rs"

[dependencies]
humantime = "1.1.1"
