[package]
name = "easybench"
version = "1.1.0"
authors = ["Alex Sayers <alex@asayers.com>"]
description = "A lightweight benchmarking library"
edition = "2018"
documentation = "https://docs.rs/easybench/"
repository = "https://github.com/asayers/easybench-rs"
readme = "README.md"
keywords = ["benchmark"]
license = "MIT OR Apache-2.0"
